// Code generated by ent, DO NOT EDIT.

package ent

import (
	"fmt"
	"strings"
	"time"

	"entgo.io/ent"
	"entgo.io/ent/dialect/sql"
	"github.com/swissdatasciencecenter/hackagon/components/backend/ent/hackathon"
	"github.com/swissdatasciencecenter/hackagon/components/backend/ent/project"
	"github.com/swissdatasciencecenter/hackagon/components/backend/ent/track"
	"github.com/swissdatasciencecenter/hackagon/components/backend/ent/user"
)

// Project is the model entity for the Project schema.
type Project struct {
	config `json:"-"`
	// ID of the ent.
	ID int `json:"id,omitempty"`
	// Title holds the value of the "title" field.
	Title string `json:"title,omitempty"`
	// CreatedAt holds the value of the "created_at" field.
	CreatedAt time.Time `json:"created_at,omitempty"`
	// ModifiedAt holds the value of the "modified_at" field.
	ModifiedAt time.Time `json:"modified_at,omitempty"`
	// Status holds the value of the "status" field.
	Status project.Status `json:"status,omitempty"`
	// Image holds the value of the "image" field.
	Image string `json:"image,omitempty"`
	// Description holds the value of the "description" field.
	Description string `json:"description,omitempty"`
	// Edges holds the relations/edges for other nodes in the graph.
	// The values are being populated by the ProjectQuery when eager-loading is set.
	Edges                  ProjectEdges `json:"edges"`
	hackathon_projects     *int
	track_projects         *int
	user_created_projects  *int
	user_modified_projects *int
	selectValues           sql.SelectValues
}

// ProjectEdges holds the relations/edges for other nodes in the graph.
type ProjectEdges struct {
	// Track holds the value of the track edge.
	Track *Track `json:"track,omitempty"`
	// Hackathon holds the value of the hackathon edge.
	Hackathon *Hackathon `json:"hackathon,omitempty"`
	// Creator holds the value of the creator edge.
	Creator *User `json:"creator,omitempty"`
	// Modifier holds the value of the modifier edge.
	Modifier *User `json:"modifier,omitempty"`
	// Teams holds the value of the teams edge.
	Teams []*Team `json:"teams,omitempty"`
	// Submissions holds the value of the submissions edge.
	Submissions []*Submission `json:"submissions,omitempty"`
	// loadedTypes holds the information for reporting if a
	// type was loaded (or requested) in eager-loading or not.
	loadedTypes [6]bool
}

// TrackOrErr returns the Track value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e ProjectEdges) TrackOrErr() (*Track, error) {
	if e.Track != nil {
		return e.Track, nil
	} else if e.loadedTypes[0] {
		return nil, &NotFoundError{label: track.Label}
	}
	return nil, &NotLoadedError{edge: "track"}
}

// HackathonOrErr returns the Hackathon value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e ProjectEdges) HackathonOrErr() (*Hackathon, error) {
	if e.Hackathon != nil {
		return e.Hackathon, nil
	} else if e.loadedTypes[1] {
		return nil, &NotFoundError{label: hackathon.Label}
	}
	return nil, &NotLoadedError{edge: "hackathon"}
}

// CreatorOrErr returns the Creator value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e ProjectEdges) CreatorOrErr() (*User, error) {
	if e.Creator != nil {
		return e.Creator, nil
	} else if e.loadedTypes[2] {
		return nil, &NotFoundError{label: user.Label}
	}
	return nil, &NotLoadedError{edge: "creator"}
}

// ModifierOrErr returns the Modifier value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e ProjectEdges) ModifierOrErr() (*User, error) {
	if e.Modifier != nil {
		return e.Modifier, nil
	} else if e.loadedTypes[3] {
		return nil, &NotFoundError{label: user.Label}
	}
	return nil, &NotLoadedError{edge: "modifier"}
}

// TeamsOrErr returns the Teams value or an error if the edge
// was not loaded in eager-loading.
func (e ProjectEdges) TeamsOrErr() ([]*Team, error) {
	if e.loadedTypes[4] {
		return e.Teams, nil
	}
	return nil, &NotLoadedError{edge: "teams"}
}

// SubmissionsOrErr returns the Submissions value or an error if the edge
// was not loaded in eager-loading.
func (e ProjectEdges) SubmissionsOrErr() ([]*Submission, error) {
	if e.loadedTypes[5] {
		return e.Submissions, nil
	}
	return nil, &NotLoadedError{edge: "submissions"}
}

// scanValues returns the types for scanning values from sql.Rows.
func (*Project) scanValues(columns []string) ([]any, error) {
	values := make([]any, len(columns))
	for i := range columns {
		switch columns[i] {
		case project.FieldID:
			values[i] = new(sql.NullInt64)
		case project.FieldTitle, project.FieldStatus, project.FieldImage, project.FieldDescription:
			values[i] = new(sql.NullString)
		case project.FieldCreatedAt, project.FieldModifiedAt:
			values[i] = new(sql.NullTime)
		case project.ForeignKeys[0]: // hackathon_projects
			values[i] = new(sql.NullInt64)
		case project.ForeignKeys[1]: // track_projects
			values[i] = new(sql.NullInt64)
		case project.ForeignKeys[2]: // user_created_projects
			values[i] = new(sql.NullInt64)
		case project.ForeignKeys[3]: // user_modified_projects
			values[i] = new(sql.NullInt64)
		default:
			values[i] = new(sql.UnknownType)
		}
	}
	return values, nil
}

// assignValues assigns the values that were returned from sql.Rows (after scanning)
// to the Project fields.
func (_m *Project) assignValues(columns []string, values []any) error {
	if m, n := len(values), len(columns); m < n {
		return fmt.Errorf("mismatch number of scan values: %d != %d", m, n)
	}
	for i := range columns {
		switch columns[i] {
		case project.FieldID:
			value, ok := values[i].(*sql.NullInt64)
			if !ok {
				return fmt.Errorf("unexpected type %T for field id", value)
			}
			_m.ID = int(value.Int64)
		case project.FieldTitle:
			if value, ok := values[i].(*sql.NullString); !ok {
				return fmt.Errorf("unexpected type %T for field title", values[i])
			} else if value.Valid {
				_m.Title = value.String
			}
		case project.FieldCreatedAt:
			if value, ok := values[i].(*sql.NullTime); !ok {
				return fmt.Errorf("unexpected type %T for field created_at", values[i])
			} else if value.Valid {
				_m.CreatedAt = value.Time
			}
		case project.FieldModifiedAt:
			if value, ok := values[i].(*sql.NullTime); !ok {
				return fmt.Errorf("unexpected type %T for field modified_at", values[i])
			} else if value.Valid {
				_m.ModifiedAt = value.Time
			}
		case project.FieldStatus:
			if value, ok := values[i].(*sql.NullString); !ok {
				return fmt.Errorf("unexpected type %T for field status", values[i])
			} else if value.Valid {
				_m.Status = project.Status(value.String)
			}
		case project.FieldImage:
			if value, ok := values[i].(*sql.NullString); !ok {
				return fmt.Errorf("unexpected type %T for field image", values[i])
			} else if value.Valid {
				_m.Image = value.String
			}
		case project.FieldDescription:
			if value, ok := values[i].(*sql.NullString); !ok {
				return fmt.Errorf("unexpected type %T for field description", values[i])
			} else if value.Valid {
				_m.Description = value.String
			}
		case project.ForeignKeys[0]:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for edge-field hackathon_projects", value)
			} else if value.Valid {
				_m.hackathon_projects = new(int)
				*_m.hackathon_projects = int(value.Int64)
			}
		case project.ForeignKeys[1]:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for edge-field track_projects", value)
			} else if value.Valid {
				_m.track_projects = new(int)
				*_m.track_projects = int(value.Int64)
			}
		case project.ForeignKeys[2]:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for edge-field user_created_projects", value)
			} else if value.Valid {
				_m.user_created_projects = new(int)
				*_m.user_created_projects = int(value.Int64)
			}
		case project.ForeignKeys[3]:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for edge-field user_modified_projects", value)
			} else if value.Valid {
				_m.user_modified_projects = new(int)
				*_m.user_modified_projects = int(value.Int64)
			}
		default:
			_m.selectValues.Set(columns[i], values[i])
		}
	}
	return nil
}

// Value returns the ent.Value that was dynamically selected and assigned to the Project.
// This includes values selected through modifiers, order, etc.
func (_m *Project) Value(name string) (ent.Value, error) {
	return _m.selectValues.Get(name)
}

// QueryTrack queries the "track" edge of the Project entity.
func (_m *Project) QueryTrack() *TrackQuery {
	return NewProjectClient(_m.config).QueryTrack(_m)
}

// QueryHackathon queries the "hackathon" edge of the Project entity.
func (_m *Project) QueryHackathon() *HackathonQuery {
	return NewProjectClient(_m.config).QueryHackathon(_m)
}

// QueryCreator queries the "creator" edge of the Project entity.
func (_m *Project) QueryCreator() *UserQuery {
	return NewProjectClient(_m.config).QueryCreator(_m)
}

// QueryModifier queries the "modifier" edge of the Project entity.
func (_m *Project) QueryModifier() *UserQuery {
	return NewProjectClient(_m.config).QueryModifier(_m)
}

// QueryTeams queries the "teams" edge of the Project entity.
func (_m *Project) QueryTeams() *TeamQuery {
	return NewProjectClient(_m.config).QueryTeams(_m)
}

// QuerySubmissions queries the "submissions" edge of the Project entity.
func (_m *Project) QuerySubmissions() *SubmissionQuery {
	return NewProjectClient(_m.config).QuerySubmissions(_m)
}

// Update returns a builder for updating this Project.
// Note that you need to call Project.Unwrap() before calling this method if this Project
// was returned from a transaction, and the transaction was committed or rolled back.
func (_m *Project) Update() *ProjectUpdateOne {
	return NewProjectClient(_m.config).UpdateOne(_m)
}

// Unwrap unwraps the Project entity that was returned from a transaction after it was closed,
// so that all future queries will be executed through the driver which created the transaction.
func (_m *Project) Unwrap() *Project {
	_tx, ok := _m.config.driver.(*txDriver)
	if !ok {
		panic("ent: Project is not a transactional entity")
	}
	_m.config.driver = _tx.drv
	return _m
}

// String implements the fmt.Stringer.
func (_m *Project) String() string {
	var builder strings.Builder
	builder.WriteString("Project(")
	builder.WriteString(fmt.Sprintf("id=%v, ", _m.ID))
	builder.WriteString("title=")
	builder.WriteString(_m.Title)
	builder.WriteString(", ")
	builder.WriteString("created_at=")
	builder.WriteString(_m.CreatedAt.Format(time.ANSIC))
	builder.WriteString(", ")
	builder.WriteString("modified_at=")
	builder.WriteString(_m.ModifiedAt.Format(time.ANSIC))
	builder.WriteString(", ")
	builder.WriteString("status=")
	builder.WriteString(fmt.Sprintf("%v", _m.Status))
	builder.WriteString(", ")
	builder.WriteString("image=")
	builder.WriteString(_m.Image)
	builder.WriteString(", ")
	builder.WriteString("description=")
	builder.WriteString(_m.Description)
	builder.WriteByte(')')
	return builder.String()
}

// Projects is a parsable slice of Project.
type Projects []*Project
