// Code generated by ent, DO NOT EDIT.

package ent

import (
	"fmt"
	"strings"
	"time"

	"entgo.io/ent"
	"entgo.io/ent/dialect/sql"
	"github.com/swissdatasciencecenter/hackagon/components/backend/ent/project"
	"github.com/swissdatasciencecenter/hackagon/components/backend/ent/submission"
	"github.com/swissdatasciencecenter/hackagon/components/backend/ent/team"
	"github.com/swissdatasciencecenter/hackagon/components/backend/ent/user"
)

// Submission is the model entity for the Submission schema.
type Submission struct {
	config `json:"-"`
	// ID of the ent.
	ID int `json:"id,omitempty"`
	// CreatedAt holds the value of the "created_at" field.
	CreatedAt time.Time `json:"created_at,omitempty"`
	// Result holds the value of the "result" field.
	Result string `json:"result,omitempty"`
	// Status holds the value of the "status" field.
	Status submission.Status `json:"status,omitempty"`
	// Version holds the value of the "version" field.
	Version int `json:"version,omitempty"`
	// Edges holds the relations/edges for other nodes in the graph.
	// The values are being populated by the SubmissionQuery when eager-loading is set.
	Edges                     SubmissionEdges `json:"edges"`
	project_submissions       *int
	team_submissions          *int
	user_created_submissions  *int
	user_modified_submissions *int
	selectValues              sql.SelectValues
}

// SubmissionEdges holds the relations/edges for other nodes in the graph.
type SubmissionEdges struct {
	// Team holds the value of the team edge.
	Team *Team `json:"team,omitempty"`
	// Project holds the value of the project edge.
	Project *Project `json:"project,omitempty"`
	// Creator holds the value of the creator edge.
	Creator *User `json:"creator,omitempty"`
	// Modifier holds the value of the modifier edge.
	Modifier *User `json:"modifier,omitempty"`
	// loadedTypes holds the information for reporting if a
	// type was loaded (or requested) in eager-loading or not.
	loadedTypes [4]bool
}

// TeamOrErr returns the Team value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e SubmissionEdges) TeamOrErr() (*Team, error) {
	if e.Team != nil {
		return e.Team, nil
	} else if e.loadedTypes[0] {
		return nil, &NotFoundError{label: team.Label}
	}
	return nil, &NotLoadedError{edge: "team"}
}

// ProjectOrErr returns the Project value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e SubmissionEdges) ProjectOrErr() (*Project, error) {
	if e.Project != nil {
		return e.Project, nil
	} else if e.loadedTypes[1] {
		return nil, &NotFoundError{label: project.Label}
	}
	return nil, &NotLoadedError{edge: "project"}
}

// CreatorOrErr returns the Creator value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e SubmissionEdges) CreatorOrErr() (*User, error) {
	if e.Creator != nil {
		return e.Creator, nil
	} else if e.loadedTypes[2] {
		return nil, &NotFoundError{label: user.Label}
	}
	return nil, &NotLoadedError{edge: "creator"}
}

// ModifierOrErr returns the Modifier value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e SubmissionEdges) ModifierOrErr() (*User, error) {
	if e.Modifier != nil {
		return e.Modifier, nil
	} else if e.loadedTypes[3] {
		return nil, &NotFoundError{label: user.Label}
	}
	return nil, &NotLoadedError{edge: "modifier"}
}

// scanValues returns the types for scanning values from sql.Rows.
func (*Submission) scanValues(columns []string) ([]any, error) {
	values := make([]any, len(columns))
	for i := range columns {
		switch columns[i] {
		case submission.FieldID, submission.FieldVersion:
			values[i] = new(sql.NullInt64)
		case submission.FieldResult, submission.FieldStatus:
			values[i] = new(sql.NullString)
		case submission.FieldCreatedAt:
			values[i] = new(sql.NullTime)
		case submission.ForeignKeys[0]: // project_submissions
			values[i] = new(sql.NullInt64)
		case submission.ForeignKeys[1]: // team_submissions
			values[i] = new(sql.NullInt64)
		case submission.ForeignKeys[2]: // user_created_submissions
			values[i] = new(sql.NullInt64)
		case submission.ForeignKeys[3]: // user_modified_submissions
			values[i] = new(sql.NullInt64)
		default:
			values[i] = new(sql.UnknownType)
		}
	}
	return values, nil
}

// assignValues assigns the values that were returned from sql.Rows (after scanning)
// to the Submission fields.
func (_m *Submission) assignValues(columns []string, values []any) error {
	if m, n := len(values), len(columns); m < n {
		return fmt.Errorf("mismatch number of scan values: %d != %d", m, n)
	}
	for i := range columns {
		switch columns[i] {
		case submission.FieldID:
			value, ok := values[i].(*sql.NullInt64)
			if !ok {
				return fmt.Errorf("unexpected type %T for field id", value)
			}
			_m.ID = int(value.Int64)
		case submission.FieldCreatedAt:
			if value, ok := values[i].(*sql.NullTime); !ok {
				return fmt.Errorf("unexpected type %T for field created_at", values[i])
			} else if value.Valid {
				_m.CreatedAt = value.Time
			}
		case submission.FieldResult:
			if value, ok := values[i].(*sql.NullString); !ok {
				return fmt.Errorf("unexpected type %T for field result", values[i])
			} else if value.Valid {
				_m.Result = value.String
			}
		case submission.FieldStatus:
			if value, ok := values[i].(*sql.NullString); !ok {
				return fmt.Errorf("unexpected type %T for field status", values[i])
			} else if value.Valid {
				_m.Status = submission.Status(value.String)
			}
		case submission.FieldVersion:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for field version", values[i])
			} else if value.Valid {
				_m.Version = int(value.Int64)
			}
		case submission.ForeignKeys[0]:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for edge-field project_submissions", value)
			} else if value.Valid {
				_m.project_submissions = new(int)
				*_m.project_submissions = int(value.Int64)
			}
		case submission.ForeignKeys[1]:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for edge-field team_submissions", value)
			} else if value.Valid {
				_m.team_submissions = new(int)
				*_m.team_submissions = int(value.Int64)
			}
		case submission.ForeignKeys[2]:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for edge-field user_created_submissions", value)
			} else if value.Valid {
				_m.user_created_submissions = new(int)
				*_m.user_created_submissions = int(value.Int64)
			}
		case submission.ForeignKeys[3]:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for edge-field user_modified_submissions", value)
			} else if value.Valid {
				_m.user_modified_submissions = new(int)
				*_m.user_modified_submissions = int(value.Int64)
			}
		default:
			_m.selectValues.Set(columns[i], values[i])
		}
	}
	return nil
}

// Value returns the ent.Value that was dynamically selected and assigned to the Submission.
// This includes values selected through modifiers, order, etc.
func (_m *Submission) Value(name string) (ent.Value, error) {
	return _m.selectValues.Get(name)
}

// QueryTeam queries the "team" edge of the Submission entity.
func (_m *Submission) QueryTeam() *TeamQuery {
	return NewSubmissionClient(_m.config).QueryTeam(_m)
}

// QueryProject queries the "project" edge of the Submission entity.
func (_m *Submission) QueryProject() *ProjectQuery {
	return NewSubmissionClient(_m.config).QueryProject(_m)
}

// QueryCreator queries the "creator" edge of the Submission entity.
func (_m *Submission) QueryCreator() *UserQuery {
	return NewSubmissionClient(_m.config).QueryCreator(_m)
}

// QueryModifier queries the "modifier" edge of the Submission entity.
func (_m *Submission) QueryModifier() *UserQuery {
	return NewSubmissionClient(_m.config).QueryModifier(_m)
}

// Update returns a builder for updating this Submission.
// Note that you need to call Submission.Unwrap() before calling this method if this Submission
// was returned from a transaction, and the transaction was committed or rolled back.
func (_m *Submission) Update() *SubmissionUpdateOne {
	return NewSubmissionClient(_m.config).UpdateOne(_m)
}

// Unwrap unwraps the Submission entity that was returned from a transaction after it was closed,
// so that all future queries will be executed through the driver which created the transaction.
func (_m *Submission) Unwrap() *Submission {
	_tx, ok := _m.config.driver.(*txDriver)
	if !ok {
		panic("ent: Submission is not a transactional entity")
	}
	_m.config.driver = _tx.drv
	return _m
}

// String implements the fmt.Stringer.
func (_m *Submission) String() string {
	var builder strings.Builder
	builder.WriteString("Submission(")
	builder.WriteString(fmt.Sprintf("id=%v, ", _m.ID))
	builder.WriteString("created_at=")
	builder.WriteString(_m.CreatedAt.Format(time.ANSIC))
	builder.WriteString(", ")
	builder.WriteString("result=")
	builder.WriteString(_m.Result)
	builder.WriteString(", ")
	builder.WriteString("status=")
	builder.WriteString(fmt.Sprintf("%v", _m.Status))
	builder.WriteString(", ")
	builder.WriteString("version=")
	builder.WriteString(fmt.Sprintf("%v", _m.Version))
	builder.WriteByte(')')
	return builder.String()
}

// Submissions is a parsable slice of Submission.
type Submissions []*Submission
