// Code generated by ent, DO NOT EDIT.

package ent

import (
	"fmt"
	"strings"
	"time"

	"entgo.io/ent"
	"entgo.io/ent/dialect/sql"
	"github.com/swissdatasciencecenter/hackagon/components/backend/ent/team"
	"github.com/swissdatasciencecenter/hackagon/components/backend/ent/teamparticipant"
	"github.com/swissdatasciencecenter/hackagon/components/backend/ent/user"
)

// TeamParticipant is the model entity for the TeamParticipant schema.
type TeamParticipant struct {
	config `json:"-"`
	// TeamID holds the value of the "team_id" field.
	TeamID int `json:"team_id,omitempty"`
	// UserID holds the value of the "user_id" field.
	UserID int `json:"user_id,omitempty"`
	// CreatedAt holds the value of the "created_at" field.
	CreatedAt time.Time `json:"created_at,omitempty"`
	// Edges holds the relations/edges for other nodes in the graph.
	// The values are being populated by the TeamParticipantQuery when eager-loading is set.
	Edges        TeamParticipantEdges `json:"edges"`
	selectValues sql.SelectValues
}

// TeamParticipantEdges holds the relations/edges for other nodes in the graph.
type TeamParticipantEdges struct {
	// Team holds the value of the team edge.
	Team *Team `json:"team,omitempty"`
	// User holds the value of the user edge.
	User *User `json:"user,omitempty"`
	// loadedTypes holds the information for reporting if a
	// type was loaded (or requested) in eager-loading or not.
	loadedTypes [2]bool
}

// TeamOrErr returns the Team value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e TeamParticipantEdges) TeamOrErr() (*Team, error) {
	if e.Team != nil {
		return e.Team, nil
	} else if e.loadedTypes[0] {
		return nil, &NotFoundError{label: team.Label}
	}
	return nil, &NotLoadedError{edge: "team"}
}

// UserOrErr returns the User value or an error if the edge
// was not loaded in eager-loading, or loaded but was not found.
func (e TeamParticipantEdges) UserOrErr() (*User, error) {
	if e.User != nil {
		return e.User, nil
	} else if e.loadedTypes[1] {
		return nil, &NotFoundError{label: user.Label}
	}
	return nil, &NotLoadedError{edge: "user"}
}

// scanValues returns the types for scanning values from sql.Rows.
func (*TeamParticipant) scanValues(columns []string) ([]any, error) {
	values := make([]any, len(columns))
	for i := range columns {
		switch columns[i] {
		case teamparticipant.FieldTeamID, teamparticipant.FieldUserID:
			values[i] = new(sql.NullInt64)
		case teamparticipant.FieldCreatedAt:
			values[i] = new(sql.NullTime)
		default:
			values[i] = new(sql.UnknownType)
		}
	}
	return values, nil
}

// assignValues assigns the values that were returned from sql.Rows (after scanning)
// to the TeamParticipant fields.
func (_m *TeamParticipant) assignValues(columns []string, values []any) error {
	if m, n := len(values), len(columns); m < n {
		return fmt.Errorf("mismatch number of scan values: %d != %d", m, n)
	}
	for i := range columns {
		switch columns[i] {
		case teamparticipant.FieldTeamID:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for field team_id", values[i])
			} else if value.Valid {
				_m.TeamID = int(value.Int64)
			}
		case teamparticipant.FieldUserID:
			if value, ok := values[i].(*sql.NullInt64); !ok {
				return fmt.Errorf("unexpected type %T for field user_id", values[i])
			} else if value.Valid {
				_m.UserID = int(value.Int64)
			}
		case teamparticipant.FieldCreatedAt:
			if value, ok := values[i].(*sql.NullTime); !ok {
				return fmt.Errorf("unexpected type %T for field created_at", values[i])
			} else if value.Valid {
				_m.CreatedAt = value.Time
			}
		default:
			_m.selectValues.Set(columns[i], values[i])
		}
	}
	return nil
}

// Value returns the ent.Value that was dynamically selected and assigned to the TeamParticipant.
// This includes values selected through modifiers, order, etc.
func (_m *TeamParticipant) Value(name string) (ent.Value, error) {
	return _m.selectValues.Get(name)
}

// QueryTeam queries the "team" edge of the TeamParticipant entity.
func (_m *TeamParticipant) QueryTeam() *TeamQuery {
	return NewTeamParticipantClient(_m.config).QueryTeam(_m)
}

// QueryUser queries the "user" edge of the TeamParticipant entity.
func (_m *TeamParticipant) QueryUser() *UserQuery {
	return NewTeamParticipantClient(_m.config).QueryUser(_m)
}

// Update returns a builder for updating this TeamParticipant.
// Note that you need to call TeamParticipant.Unwrap() before calling this method if this TeamParticipant
// was returned from a transaction, and the transaction was committed or rolled back.
func (_m *TeamParticipant) Update() *TeamParticipantUpdateOne {
	return NewTeamParticipantClient(_m.config).UpdateOne(_m)
}

// Unwrap unwraps the TeamParticipant entity that was returned from a transaction after it was closed,
// so that all future queries will be executed through the driver which created the transaction.
func (_m *TeamParticipant) Unwrap() *TeamParticipant {
	_tx, ok := _m.config.driver.(*txDriver)
	if !ok {
		panic("ent: TeamParticipant is not a transactional entity")
	}
	_m.config.driver = _tx.drv
	return _m
}

// String implements the fmt.Stringer.
func (_m *TeamParticipant) String() string {
	var builder strings.Builder
	builder.WriteString("TeamParticipant(")
	builder.WriteString("team_id=")
	builder.WriteString(fmt.Sprintf("%v", _m.TeamID))
	builder.WriteString(", ")
	builder.WriteString("user_id=")
	builder.WriteString(fmt.Sprintf("%v", _m.UserID))
	builder.WriteString(", ")
	builder.WriteString("created_at=")
	builder.WriteString(_m.CreatedAt.Format(time.ANSIC))
	builder.WriteByte(')')
	return builder.String()
}

// TeamParticipants is a parsable slice of TeamParticipant.
type TeamParticipants []*TeamParticipant
